--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   </style>
 </head>
 <body>
-  <img src="elemen/larkxz.jpg" alt="Profil" class="profile-image" draggable="false">
+  <img src="elemen/Larkxz.jpg" alt="Profil" class="profile-image" draggable="false">
   <h1>@Larkxz</h1>
   <div class="project">
     <a href="https://discord.com/invite/VGzxqtBx7Q" class="btn" target="_blank">Kizen Store</a>
