--- a/index.html
+++ b/index.html
@@ -106,8 +106,11 @@
     <a href="notyet.html" class="btn">Testimoni</a>
     <br>
     <a href="https://www.shutterstock.com/id/g/Larkxz" class="btn" target="_blank">More About My Design</a>
+    <br>
+    <a href=https://discord.gg/KBhfRJgVrV" class="btn" target="_blank">Waroeng Spesial Need Seller</a>
     <br><br>
     <a href="https://discord.gg/4dnargdz5G" class="btnloser" target="_blank">Contact me / order </a>
+    <br><br>
     <script>
         document.addEventListener('contextmenu', function(e) {
           e.preventDefault();
