--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <br>
     <a href="https://discord.com/invite/49chhyrxDq" class="btn" target="_blank">Balistic Store</a>
     <br>
-    <a href="notyet.html" class="btn">Testimoni</a>
+    <a href="comingsoon.html" class="btn">Testimoni</a>
     <br>
     <a href="https://www.shutterstock.com/id/g/Larkxz" class="btn" target="_blank">More About My Design</a>
     <br>
