--- a/comingsoon.html
+++ b/comingsoon.html
@@ -74,7 +74,7 @@
       padding: 10px;
       text-align: center;
       background-color: rgb(14, 199, 255);
-      color: rgb(73, 50, 80);
+      color: rgb(30, 20, 32);
       border: none;
       border-radius: 5px;
       font-size: 18px;
@@ -89,7 +89,10 @@
       text-shadow: 0 4px 8px rgba(43, 43, 43, 0.979);
     }
 
-
+.footer{
+    text-align: center;
+    margin-top: 50px;
+}
   </style>
 </head>
 <body>
@@ -100,11 +103,14 @@
     <br>
     <a href="https://discord.com/invite/49chhyrxDq" class="btn" target="_blank">Balistic Store</a>
     <br>
-    <a href="#" class="btn">Testimoni <b>Coming Soon</b></a>
+    <a href="#" class="btn">Testimoni(Bantu Banyakin Sir!)</a>
     <br>
     <a href="https://www.shutterstock.com/id/g/Larkxz" class="btn" target="_blank">More About My Design</a>
+    <br>
+    <a href="https://discord.gg/KBhfRJgVrV" class="btn" target="_blank">Waroeng Spesial Need Seller</a>
     <br><br>
-    <a href="https://discord.gg/4dnargdz5G" class="btnloser" target="_blank">Contact me</a>
+    <a href="https://discord.gg/4dnargdz5G" class="btnloser" target="_blank">Contact me / order </a>
+    <br><br>
     <script>
         document.addEventListener('contextmenu', function(e) {
           e.preventDefault();
@@ -114,6 +120,7 @@
           return false;
         }
       </script>
-      
+      <footer class="footer">Made By Larkxz</footer>
+      <style>::-webkit-scrollbar {display: none;}</style></body>
 </body>
 </html>
