--- a/index.html
+++ b/index.html
@@ -96,21 +96,22 @@
   </style>
 </head>
 <body>
-  <img src="elemen/Larkxz.jpg" alt="Profil" class="profile-image" draggable="false">
+  <img src="elemen/larkxz.jpg" alt="Profil" class="profile-image" draggable="false">
   <h1>@Larkxz</h1>
   <div class="project">
     <a href="https://discord.com/invite/VGzxqtBx7Q" class="btn" target="_blank">Kizen Store</a>
     <br>
     <a href="https://discord.com/invite/49chhyrxDq" class="btn" target="_blank">Balistic Store</a>
     <br>
-    <a href="comingsoon.html" class="btn">Testimoni</a>
+    <a href="notyet.html" class="btn">Testimoni</a>
+    <br>
+    <a href="https://discord.gg/KBhfRJgVrV" class="btn" target="_blank">Waroeng Store Need Seller</a>
+    <br>
+    <a href="price/index.html" class="btn" target="_blank">Price List Design Logo</a>
     <br>
     <a href="https://www.shutterstock.com/id/g/Larkxz" class="btn" target="_blank">More About My Design</a>
-    <br>
-    <a href="https://discord.gg/KBhfRJgVrV" class="btn" target="_blank">Waroeng Spesial Need Seller</a>
     <br><br>
     <a href="https://discord.gg/4dnargdz5G" class="btnloser" target="_blank">Contact me / order </a>
-    <br><br>
     <script>
         document.addEventListener('contextmenu', function(e) {
           e.preventDefault();
