--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link type="image/x-icon" rel="shortcut icon" href="https://i.imgur.com/Dg7AqLL.jpg">
   <title>Larkxz</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
@@ -96,7 +97,7 @@
   </style>
 </head>
 <body>
-  <img src="elemen/larkxz.jpg" alt="Profil" class="profile-image" draggable="false">
+  <img src="elemen/Larkxz.jpg" alt="Profil" class="profile-image" draggable="false">
   <h1>@Larkxz</h1>
   <div class="project">
     <a href="https://discord.com/invite/VGzxqtBx7Q" class="btn" target="_blank">Kizen Store</a>
