--- a/price/index.html
+++ b/price/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link type="image/x-icon" rel="shortcut icon" href="https://i.imgur.com/Dg7AqLL.jpg">
   <title>Box Layout</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
