--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <br>
     <a href="https://discord.com/invite/49chhyrxDq" class="btn" target="_blank">Balistic Store</a>
     <br>
-    <a href="notyet.html" class="btn">Testimoni</a>
+    <a href="comingsoon.html" class="btn">Testimoni</a>
     <br>
     <a href="https://discord.gg/KBhfRJgVrV" class="btn" target="_blank">Waroeng Store Need Seller</a>
     <br>
