--- a/price/index.html
+++ b/price/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link type="image/x-icon" rel="shortcut icon" href="https://i.imgur.com/Dg7AqLL.jpg">
-  <title>Box Layout</title>
+  <title>Price List Logo Design</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     @font-face {
@@ -194,7 +194,7 @@
         - Abstract, Geometric<br>
         - Free 3 Mockup<br>
         - Text, Shape Logo<br><br>
-        Rp35.000+ / 2$+
+        Rp35.000+ / 2.35$+
       </div>
     </div>
   </div>
