--- a/testi.html
+++ b/testi.html
@@ -95,6 +95,9 @@
   <div class="container">
     <img src="elemen/Testimoni 1.jpg" alt="Image 1" class="image" draggable="false">
     <img src="elemen/Testi 2.jpg" alt="Image 2" class="image" draggable="false">
+    <img src="elemen/Testimoni 3  #1.jpg" alt="Image 2" class="image" draggable="false">
+    <img src="elemen/Testimoni 3 #2.jpg" alt="Image 2" class="image" draggable="false">
+    <img src="elemen/Testimoni 3 #3.jpg" alt="Image 2" class="image" draggable="false">
 
     <!-- Add more images here -->
   </div>
