--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           return false;
         }
       </script>      
-      <footer class="footer"><div class="lol">Gunakan Situs Desktop Untuk Hasil Yang Lebih Baik!</div>Made By Larkxz</footer>
+      <footer class="footer"><div class="lol">Gunakan Situs Desktop Untuk Hasil Yang Lebih Baik!</div>Made By Larkxz With ChatGPT!</footer>
       <style>::-webkit-scrollbar {display: none;}</style></body>
 </body>
 </html>
