--- a/price/index.html
+++ b/price/index.html
@@ -1,3 +1,20 @@
+Exaple:
+cute tiny hyperrealistic Anime wolf from pokemon, chibi, adorable and fluffy, logo design, cartoon, cinematic lighting effect, charming, 3D vector art, cute and quirky, fantasy art, bokeh, hand-drawn, digital painting, soft lighting, isometric style, 4K resolution, photorealistic rendering, highly detailed clean, vector image, photorealistic masterpiece, professional photography, simple space backdrop, flat white background, isometric, vibrant vector
+Negative Promnt:
+duplicate, blurry, abstract, bad anatomy, bad eyes, crossed eyes, disfigured, poorly drawn face, mutation, mutated, ((extra limb)), ugly, two trunks, missing limb, floating limbs, disconnected limbs, malformed hands, blur, out of focus, long neck, ((((mutated hands and fingers)))), (((out of frame))), floating limbs, disconnected limbs, blur, out of focus, mutated foot, long neck, ((((mutated hands and fingers)))), bad eyes, crossed eyes, disfigured, poorly drawn, mutation, mutated, ((extra limb)), ugly, poorly drawn hands, blur, out of focus, long neck, long body, two face, out of frame, text, error, cropped, 3 shoes, 3 legs,2 ears, low quality, jpeg artifacts,morbid, double image, ugly, disfigured, cut off, ugly, grain, low res, deformed, blurry, bad anatomy, disfigured, poorly drawn face, disconnected limbs, mangled, extra fingers, duplicate artifacts, missing arms, mutilated hands, cloned face,
+
+Example:
+gentle beautiful girl, messy black hair, brown and gray heterochromia, snowy dress, hourglass body, little smile, open mind, yoga studio, figure, anime girl, face Clean detailed, intractated clothing, similar colors, nice gradients, depth of field, clean images, high quality, high detail, high definition, Luminous Studio graphics engine, faces. cute, blue eyes
+
+Negative promnp:
+((2 heads))), duplicate, blurry, abstract, disfigured, deformed, cartoon, animated, toy, figure, framed, 3d, cartoon, 3d, disfigured, bad art, deformed, poorly drawn, extra limbs, close up, b&w, weird colors, blurry, watermark, blur haze, 2 heads, long neck, watermark, elongated body, cropped image,out of frame,draft,deformed hands, twisted fingers, double image, malformed hands, multiple heads, extra limb, ugly, poorly drawn hands, missing limb, cut-off, over satured, grain, lowères, bad anatomy, poorly drawn face, mutation, mutated, floating limbs, disconnected limbs, out of focus, long body, disgusting, extra fingers, groos proportions, missing arms, mutated hands, cloned face, missing legs
+
+Prompt+
+a beautiful woman 16 years old naked with white long hair and seductive face also lewd face and glowing body, big boobs , office, rich color, dramatic lightning, Nikon D850 film stock photograph Kodak Portrait 400 camera f1.6 lens, little smile, slim, hand touching groin, american
+
+Prompt-
+easynegative, badhandv4, (low quality, worst quality:1.4), poorly drawn hands, bad anatomy, monochrome, { long body }, bad anatomy , liquid body, malformed, mutated, anatomical nonsense ,bad proportions, uncoordinated body, unnatural body, disfigured, ugly, gross proportions ,mutation, disfigured, deformed, { mutation}, {poorlydrawn} , bad hand, mutated hand, bad fingers, mutated fingers,   badhandv4 ,liquid tongue, long neck, fused ears, bad ears, poorly drawn ears, extra ears, liquid ears, heavy ears, missing ears, fused animal ears, bad animal ears, poorly drawn animal ears, extra animal ears, liquid animal ears, heavy animal ears, missing animal ears, bad hairs, poorly drawn hairs, fused hairs, bad face, fused face, poorly drawn face, cloned face, big face, long face, bad eyes, fused eyes poorly drawn eyes, extra eyes, bad mouth, fused mouth, poorly drawn mouth, bad tongue, big mouth, bad perspective, bad objects placement
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -154,6 +171,17 @@
     background-color: #6464645b; /* Warna latar belakang saat teks dipilih di Firefox */
     color: #333; /* Warna teks saat teks dipilih di Firefox */
   }
+
+  .strikethrough-text {
+    text-decoration: line-through;
+    color: rgb(119, 0, 0);
+    font-weight: bold;
+  }
+  .promo{
+    color: #701ab6;
+    font-family: 'Poppins';
+    font-weight: bold;
+  }
   </style>
 </head>
 <body style="background-image:url('https://media.istockphoto.com/id/629531868/photo/abstract-white-soft-background.jpg?b=1&s=170667a&w=0&k=20&c=EtdFDso3Z-Piled4i78ulwIOikLhWfZMcY5nMa2k0C4=');">
@@ -170,7 +198,8 @@
         - Format File JPG Only<br>
         - Abstract/Geometric<br>
         - Text/Shape Logo<br><br>
-        Rp15.000 / 1$<br>
+        <p class="strikethrough-text">Rp15.000 / 1$</p>
+        <p class="promo">Rp10.000 / 0.67$</p>
       </div>
     </div>
     <div class="box">
@@ -181,8 +210,9 @@
         - Format File JPG/Png<br>
         - Abstract/Geometric<br>
         - 3k For Mockup<br>
-        - Text/Shape Logo<br><br>
-        Rp20.000 / 1.33$
+        - Text/Shape Logo<br>
+        <p class="strikethrough-text">Rp20.000 / 1.33$</p>
+        <p class="promo">Rp15.000 / 1$</p>
       </div>
     </div>
     <div class="box">
@@ -194,7 +224,8 @@
         - Abstract, Geometric<br>
         - Free 3 Mockup<br>
         - Text, Shape Logo<br><br>
-        Rp35.000 / 2.35$
+        <p class="strikethrough-text">Rp35.000 / 2.35$</p>
+        <p class="promo">Rp25.000 / 1.66$</p>
       </div>
     </div>
   </div>
