--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
     <br>
     <a href="https://discord.gg/KBhfRJgVrV" class="btn" target="_blank">Waroeng Store Need Seller</a>
     <br>
+    <a href="https://discord.gg/Y4WUEPnyHE" class="btn" target="_blank">Enzorax Store</a>
+    <br>
     <a href="bio.html" class="btn" target="_blank">Larkxz Bio</a>
     <br>
     <a href="price/index.html" class="btn" target="_blank">Price List Design Logo</a>
