--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link type="image/x-icon" rel="shortcut icon" href="https://i.imgur.com/Dg7AqLL.jpg">
 <html>
 <head>
   <title>Larkxz</title>
